--- a/src/components/filterBuilder/FilterBuilder.css
+++ b/src/components/filterBuilder/FilterBuilder.css
@@ -1,8 +1,8 @@
 .WrappingDiv {
   display: grid;
   grid-template-areas:
-    'filter'
-    'preview';
+    "filter"
+    "preview";
 }
 
 .filterBuilding-div {
@@ -13,7 +13,7 @@
   grid-area: filter;
   border: 1px solid lightgrey;
   border-radius: 5px;
-  box-shadow: var(--boxshadow) ;
+  box-shadow: var(--boxshadow);
   margin-top: 5vh;
   background-color: var(--boxbackground);
 }
@@ -28,7 +28,7 @@
 
 .ButtonDiv {
   display: grid;
-  grid-template-areas: '. preview create';
+  grid-template-areas: ". preview create";
   grid-template-columns: 30% auto auto;
   margin-bottom: 20px;
 }
@@ -78,7 +78,7 @@
 
 .filterSelect {
   display: grid;
-  grid-template-areas: 'intruction selector';
+  grid-template-areas: "intruction selector";
   grid-template-columns: 30% auto;
 }
 .filterSelect p {
