Replace AAS logo with a new logo for Argus
This patch also introduces a new Logo component that
is used to wrap the different logo versions, instead of
hard coding uncomprehensible inline svg everywhere.

This hopefully closes #76.

--- a/src/views/login/LoginView.css
+++ b/src/views/login/LoginView.css
@@ -37,10 +37,15 @@ button {
 }
 
 #login-logo {
+  width: 100%;
   height: 100%;
   margin: auto;
   grid-area: logo;
   stroke: var(--loginlogo);
+}
+
+#login-logo img {
+  width: 30%;
 }
 
 #login-text {
