--- a/src/components/timeslotlist/timeslotlist.css
+++ b/src/components/timeslotlist/timeslotlist.css
@@ -11,8 +11,20 @@
     text-transform: capitalize;
 }
 
+.new-timeslot-button button {
+    background-color: var(--primary-light);
+    color: var(--white);
+    border-radius: 50%;
+    height: 4rem;
+    width: 4rem;
+    margin-top: 1.2rem;
+}
+
 @media (max-width: 800px) {
     .new-timeslot {
         display: none;
+    }
+    .new-timeslot-button {
+        display: block;
     }
 }
