--- a/src/components/timeslotlist/timeslotlist.css
+++ b/src/components/timeslotlist/timeslotlist.css
@@ -6,8 +6,8 @@
     border: 1px dashed var(--primary-light);
 }
 
-.root p {
-    font-size: 20px;
+.new-timeslot-paragraph {
+    font-size: 20px !important;
     text-transform: capitalize;
 }
 
