--- a/src/components/incident/IncidentFilterToolbar.css
+++ b/src/components/incident/IncidentFilterToolbar.css
@@ -23,7 +23,7 @@
         display: none !important;
     }
     div[title="Filter selector"] > div {
-        min-width: 18rem;
+        width: auto;
         max-width: 18em;
         flex-grow: 1;
     }
@@ -57,32 +57,33 @@
     .extra-filter-accordion {
         margin: 0.5rem 0.5rem !important;
     }
+    .more-settings-item {
+        flex-grow: 1;
+        flex-shrink: 1;
+    }
 }
 
 @media (max-width: 800px) {
     div[title="Filter selector"] > div {
-        min-width: 16rem;
-        max-width: 16em;
+        max-width: 16rem;
     }
 }
 
 @media (max-width: 730px) {
     div[title="Filter selector"] > div {
-        min-width: 14rem;
         max-width: 14em;
     }
 }
 
 @media (max-width: 670px) {
     div[title="Filter selector"] > div {
-        min-width: 13rem;
         max-width: 13em;
     }
 }
 
 @media (max-width: 599px) {
-    div[title="Filter selector"] > div div{
-        width: 24rem;
+    div[title="Filter selector"] > div {
+        /*width: auto;*/
         max-width: 24em;
     }
     .acked-state-switch, .open-state-switch{
@@ -94,36 +95,31 @@
 }
 
 @media (max-width: 540px) {
-    div[title="Filter selector"] > div div{
-        width: 20rem;
+    div[title="Filter selector"] > div {
         max-width: 20em;
     }
 }
 
 @media (max-width: 500px) {
-    div[title="Filter selector"] > div div{
-        width: 18rem;
+    div[title="Filter selector"] > div {
         max-width: 18em;
     }
 }
 
 @media (max-width: 435px) {
-    div[title="Filter selector"] > div div{
-        width: 16rem;
+    div[title="Filter selector"] > div {
         max-width: 16em;
     }
 }
 
 @media (max-width: 390px) {
-    div[title="Filter selector"] > div div{
-        width: 14rem;
+    div[title="Filter selector"] > div {
         max-width: 14em;
     }
 }
 
 @media (max-width: 360px) {
-    div[title="Filter selector"] > div div{
-        width: 12rem;
+    div[title="Filter selector"] > div {
         max-width: 12rem;
     }
 }
@@ -132,8 +128,7 @@
     .extra-filter-options-container {
         padding: 0.2rem !important;
     }
-    div[title="Filter selector"] > div div{
-        width: 11rem;
+    div[title="Filter selector"] > div {
         max-width: 11rem;
     }
 }
