--- a/src/components/incident/IncidentFilterToolbar.css
+++ b/src/components/incident/IncidentFilterToolbar.css
@@ -19,19 +19,11 @@
 @media (max-width: 959px) {
     .lg-xl-source-selector, .lg-xl-tags-selector,
     .lg-xl-severity-selector, .lg-xl-filter-selector,
-    .lg-xl-more-settings-item {
+    .lg-xl-more-settings-item, .lg-xl-open-state-switch,
+    .lg-xl-acked-state-switch {
         display: none !important;
     }
-    div[title="Filter selector"] > div {
-        width: auto;
-        max-width: 18em;
-        flex-grow: 1;
-    }
     #filter-select {
-        padding-right: 0.3rem;
-    }
-    div[title="Filter selector"] button {
-        padding-left: 0.3rem;
         padding-right: 0.3rem;
     }
     .extra-filter-options-container {
@@ -57,78 +49,26 @@
     .extra-filter-accordion {
         margin: 0.5rem 0.5rem !important;
     }
-    .more-settings-item {
+    .sm-more-settings-item {
         flex-grow: 1;
         flex-shrink: 1;
     }
-}
-
-@media (max-width: 800px) {
-    div[title="Filter selector"] > div {
-        max-width: 16rem;
+    .sm-more-settings-item button{
+        width: 100%;
+        height: 2.3rem;
     }
-}
-
-@media (max-width: 730px) {
-    div[title="Filter selector"] > div {
-        max-width: 14em;
-    }
-}
-
-@media (max-width: 670px) {
-    div[title="Filter selector"] > div {
-        max-width: 13em;
+    .sm-more-settings-item svg{
+        display:block; position: absolute;
+        height:100%; width:100%; margin: 0; padding: 0;
+        border: none; overflow: hidden;
     }
 }
 
 @media (max-width: 599px) {
-    div[title="Filter selector"] > div {
-        /*width: auto;*/
-        max-width: 24em;
-    }
     .acked-state-switch, .open-state-switch{
         width: 100%;
     }
     .acked-state-switch button, .open-state-switch button{
         height: 2.2rem;
-    }
-}
-
-@media (max-width: 540px) {
-    div[title="Filter selector"] > div {
-        max-width: 20em;
-    }
-}
-
-@media (max-width: 500px) {
-    div[title="Filter selector"] > div {
-        max-width: 18em;
-    }
-}
-
-@media (max-width: 435px) {
-    div[title="Filter selector"] > div {
-        max-width: 16em;
-    }
-}
-
-@media (max-width: 390px) {
-    div[title="Filter selector"] > div {
-        max-width: 14em;
-    }
-}
-
-@media (max-width: 360px) {
-    div[title="Filter selector"] > div {
-        max-width: 12rem;
-    }
-}
-
-@media (max-width: 300px) {
-    .extra-filter-options-container {
-        padding: 0.2rem !important;
-    }
-    div[title="Filter selector"] > div {
-        max-width: 11rem;
     }
 }
