--- a/src/components/incident/IncidentDetails.css
+++ b/src/components/incident/IncidentDetails.css
@@ -9,15 +9,19 @@
 
 @media (max-width: 599px) {
     .close-button-container, .ack-button-container,
+    .create-ticket-button-container,
     .close-button-container button,
     .ack-button-container button,
+    .create-ticket-button-container button,
     .add-ticket-container {
         min-width: 100% !important;
     }
 }
 
 @media (max-width: 360px) {
-    .ack-button-container button, .close-button-container button {
+    .ack-button-container button,
+    .close-button-container button,
+    .create-ticket-button-container button {
         min-height: 3rem !important;
     }
     .ticket-input-button-container {
